--- a/src/components/TodoForm/TodoForm.module.css
+++ b/src/components/TodoForm/TodoForm.module.css
@@ -6,12 +6,12 @@
   height: 45px;
   max-width: 400px;
   /* min-width: 300px; */
-  padding-left: 10px;
-  padding-right: 10px;
+  /* margin-left: auto;
+  margin-right: auto; */
 }
 
 .inputArea {
-  display: block;
+  display: flex;
   width: 100%;
   max-width: 400px;
   min-width: 190px;
@@ -22,18 +22,22 @@
   border-top-left-radius: 15px;
   border-bottom-left-radius: 15px;
   border: 0px;
+  margin-left: 10px;
 }
 
 .btnInput {
+  margin-right: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 105px;
+  width: 100%;
+  min-width: 55px;
+  max-width: 105px;
   outline: none;
   border: 0px;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  padding-right: 15px;
+  /* padding-top: 15px; */
+  /* padding-bottom: 15px; */
+  /* padding-right: 15px; */
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
 }
