--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -10,3 +10,13 @@
 .btnFooter:hover {  
   background-color: rgb(80, 80, 253);
 }
+
+.btnFooterActive {  
+  margin-left: 4px;
+  border: 0px;
+  border-radius: 7px;
+  outline: none;
+  width: auto;
+  height: 25px;
+  background-color: rgb(80, 80, 253);
+} 
