--- a/src/components/TodoForm/TodoForm.module.scss
+++ b/src/components/TodoForm/TodoForm.module.scss
@@ -41,8 +41,32 @@
   }
 }
 
+.btnContainer {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 40px;
+}
+
 .btn {
+  transition: 0.3s;
+  outline: none;
+  padding: 5px;
+  width: 110px;
+  border-radius: 5px;
+  border: none;
+
+  &:hover{
+    transition: 0.3s;
+   background-color: #e8d047;    
+  }
+  
+  &.focus{outline:0}
+  
+  &.activeAnother {
+    background-color: rgb(70, 172, 223);
+
+  }
   &.active {
-    background-color: red;
+    background-color: rgb(239, 40, 40);
   }
 }
