--- a/src/components/TodoForm/TodoForm.module.scss
+++ b/src/components/TodoForm/TodoForm.module.scss
@@ -52,6 +52,7 @@
   outline: none;
   padding: 5px;
   width: 110px;
+  height: 40px;
   border-radius: 5px;
   border: none;
 
@@ -64,8 +65,12 @@
   
   &.activeAnother {
     background-color: rgb(70, 172, 223);
-
   }
+  
+  &.activeActiveTask {
+    background-color: rgb(137, 235, 92);
+  }
+
   &.active {
     background-color: rgb(239, 40, 40);
   }
