try to made dark/light theme in APP Constants sortedButtons reducer selector

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -8,4 +8,7 @@
   align-items: center;
   flex-direction: column;
   font-size: calc(10px + 2vmin);
+  .dark {
+    background-color: #131518;
+  }
 }
