--- a/src/components/TodoForm/TodoForm.module.scss
+++ b/src/components/TodoForm/TodoForm.module.scss
@@ -1,7 +1,7 @@
 .TodoForm {
   display: flex;
   justify-content: center;
-  margin-bottom: 40px;
+  // margin-bottom: 40px;
   width: 100%;
   height: 45px;
   max-width: 400px;
