--- a/src/components/DropDownInput/DropDownInput.module.scss
+++ b/src/components/DropDownInput/DropDownInput.module.scss
@@ -1,9 +1,11 @@
-.TodoForm {
+.DropDownInput {
   display: flex;
   justify-content: center;
-  // margin-bottom: 40px;
+  flex-wrap: wrap;
+  margin-bottom: 30px;
   width: 100%;
   height: 45px;
+  z-index: 300;
   max-width: 400px;
 }
 
@@ -39,4 +41,6 @@
     background-color: rgb(80, 80, 253);
     color: white;
   }
+
 }
+
