start react router dom

--- a/src/components/MenuDropInput/MenuDropInput.module.scss
+++ b/src/components/MenuDropInput/MenuDropInput.module.scss
@@ -9,7 +9,7 @@
   border-radius: 5px;
   word-wrap: break-word;
   max-height: 150px;
-  max-width: 200px;
+  width: 200px;
   transition: 0.5s;
 }
 
