--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  padding-top: 60px;
+  // padding-top: 60px;
   background-color: #282c34;
   min-height: 100vh;
   color: white;
