--- a/src/components/button/index.module.scss
+++ b/src/components/button/index.module.scss
@@ -59,20 +59,22 @@
     padding-bottom: -10px;
 
     &.activeClassForThemeLight {
-      margin-left: 55px;
+      position: absolute;
+      margin-left: -60px;
       width: 50px;
       height: 50px;
       border-radius: 50%;
       background-color: #f7d514;
       &:hover {
-        margin-left: 35px;
+        // margin-left: -5px;
         background-color: #a09139;
         box-shadow: -2px 0 0 0 #d8fffe;
       }
     }
 
     &.activeClassForThemeDark {
-      margin-left: -55px;
+      position: absolute;
+      margin-left: -80px;
       background-color: #131518;
       color: #ffffff;
       background-color: none;
@@ -82,6 +84,7 @@
       box-shadow: -10px 0px 0 0 #608685;
 
       &:hover {
+        margin-right: 5px;
         box-shadow: 2px 0 0 0 #f7d514;
       }
 
