--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,35 +1,49 @@
-.App {
-    text-align: center;
-    padding-top: 60px;
-    background-color: #282c34;
-    min-height: 100vh;
-    color: white;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    font-size: calc(10px + 2vmin);
-    &.dark {
-      background-color: #131518;
-    }
-    &.light {
-      background-color: #6594f0;
-    }
-  
-    .helllo {
-      fill: none;
-      stroke-dasharray: 91000;
-      stroke-linecap: round;
-      stroke-linejoin: round;
-      stroke-width: 90px;
-      stroke-dashoffset: -91000;
-      stroke: #000;
-      animation: draw 4s ease-out forwards;
-      transition-timing-function: cubic-bezier(0,.46,.59,.81);
-  
-      @keyframes draw {
-        to {
-          stroke-dashoffset: 0;
-        }
+.Home {
+  text-align: center;
+  // padding-top: 60px;
+  background-color: #282c34;
+  min-height: 100vh;
+  color: white;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  font-size: calc(10px + 2vmin);
+  &.dark {
+    background-color: #131518;
+  }
+  &.light {
+    background-color: #6594f0;
+  }
+
+  .helllo {
+    fill: none;
+    stroke-dasharray: 91000;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    stroke-width: 90px;
+    stroke-dashoffset: -91000;
+    stroke: #000;
+    animation: draw 4s ease-out forwards;
+    transition-timing-function: cubic-bezier(0, 0.46, 0.59, 0.81);
+    margin-top: 70px;
+    @keyframes draw {
+      to {
+        stroke-dashoffset: 0;
       }
     }
   }
+  .Menu { 
+    position: fixed;
+    display: flex;
+    align-items: center;
+    background-color: #333a47;
+    padding: 15px 5px;
+    border-radius: 0 0 5px 5px;
+  }
+
+  .Links {
+    display: flex;
+    color: white;
+    margin: 0 15px;
+  }
+}
