--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -8,12 +8,12 @@
   align-items: center;
   flex-direction: column;
   font-size: calc(10px + 2vmin);
-  &.dark {
-    background-color: #131518;
-  }
-  &.light {
-    background-color: #6594f0;
-  }
+  // &.dark {
+  //   background-color: #131518;
+  // }
+  // &.light {
+  //   background-color: #6594f0;
+  // }
 
   .helllo {
     fill: none;
