end problem first page, started new page

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,7 +1,8 @@
 .App {
   text-align: center;
   // padding-top: 60px;
-  background-color: #282c34;
+  // background-color: #282c34;
+  background-color: #DFDFDF;
   min-height: 100vh;
   color: white;
   display: flex;
